--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -1653,9 +1653,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Iterator\n",
+    "\n",
+    "* List의 문제 중 하나는 그 길이가 매우 커질 수 있다는 점.\n",
+    "* 예를 들어 Python2에서 ```range(1000000)```은 백만 개의 원소를 가지는 list.\n",
+    "    * 때로는 단순히 for문을 돌리기 위해 이 데이터를 모두 생성하여 메모리에 저장하는 것은 낭비일 수 있음.\n",
+    "* 반면 Python3에서는 ```range(1000000)```가 immutable sequence of numbers로서 ```for```문 등에서 활용된다.\n",
+    "    * ```for```문 등을 이용하여 반복 가능하지만, 그 값들을 생성하는 것은 필요한 경우만 실행.\n",
+    "    * ```range()```자체는 iterator는 아니지만 ```for```문에서 활용될 때는 iterator를 반환하여 실행됨.\n",
+    "* Python2에서는 이와 같은 역할을 하는 ```xrange```라 불리우는 함수가 있으며, \n",
+    "  * Python 3에서는 ```range```를 사용하면 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'range' and 'range'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-1e4dbfbfafb8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# range()를 list처럼 합치면 예상치 못한 결과가 나올 수 있음\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'range' and 'range'"
+     ]
+    }
+   ],
+   "source": [
+    "# range()를 list처럼 합치면 예상치 못한 결과가 나올 수 있음\n",
+    "for i in range(3) + range(4,6): print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list로 변환하여 해결하는 방안이 있음\n",
+    "for i in list(range(3)) + list(range(3,6)): print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(4)) + list(range(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### enumerate\n",
     "\n",
-    "* enumerate을 이용하여 인덱스와 리스트의 값에 접근"
+    "* enumerate을 이용하여 인덱스와 리스트의 값에 접근할 수 있다.\n",
+    "* (index, value)로 이루어진 iterator를 반환하여 for문 등에서 사용 가능\n",
+    "* list로 변환하여 활용하려면 list()를 이용"
    ]
   },
   {
@@ -1681,9 +1764,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Spring'), (1, 'Summer'), (2, 'Fall'), (3, 'Winter')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seasons = ['Spring', 'Summer', 'Fall', 'Winter']\n",
+    "list(enumerate(seasons))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "list의 index를 기반으로 for문을 활용하려면 크게 다음의 두 가지 방법이 있다.\n",
+    "\n",
+    "두 방법은 같은 효과를 가지며 어떤 것을 활용해도 상관은 없지만 Python에서는 두 번째 방법을 많이 사용한다.\n",
+    "\n",
     "* for i in range(len(some_list)):   \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;do something(i)&nbsp;&nbsp;&nbsp;&nbsp;     # not Pythonic   \n",
     "\n",
@@ -1697,27 +1805,48 @@
    "source": [
     "### zip\n",
     "\n",
-    "* 두 개 이상의 리스트를 원소 별로 합쳐서 투플들의 리스트로 생성"
+    "* 두 개 이상의 리스트를 원소 별로 합쳐서 tuple들의 iterator로 생성\n",
+    "* iterator로 만들어지기 때문에 실체를 확인하려면 list()를 이용하여 list로 만들어 확인"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x00000205DB9A0848>\n"
+      "[(1, 4), (2, 5), (3, 6)]\n"
      ]
     }
    ],
    "source": [
     "x = [1, 2, 3]\n",
     "y = [4, 5, 6]\n",
-    "zipped = zip(x, y)    # [(1, 4), (2, 5), (3, 6)]\n",
-    "print(zipped)"
+    "zipped = zip(x, y) # iterator for [(1, 4), (2, 5), (3, 6)]\n",
+    "print(list(zipped))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 4, 7), (2, 5, 8), (3, 6, 9)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip([1, 2, 3], [4, 5, 6], [7, 8, 9]))"
    ]
   },
   {
@@ -1947,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,9 +2087,69 @@
     "    \"hashtags\" : [\"#data\", \"#science\"]\n",
     "}\n",
     "\n",
-    "tweet_keys = tweet.keys()    #list of keys\n",
-    "tweet_values = tweet.values()   #list of values\n",
-    "tweet_items = tweet.items()   #list of (key, values)"
+    "tweet_keys = tweet.keys()       # sequence of keys\n",
+    "tweet_values = tweet.values()   # sequence of values\n",
+    "tweet_items = tweet.items()     # sequence of (key, values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['user', 'text', 'retweet_cout', 'hashtags'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['joelgrus', 'Data Science is Awesome', 100, ['#data', '#science']])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('user', 'joelgrus'), ('text', 'Data Science is Awesome'), ('retweet_cout', 100), ('hashtags', ['#data', '#science'])])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_items"
    ]
   },
   {
@@ -2055,68 +2244,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  * c의 결과는 다음과 같다 : Counter({0: 2, 1: 1, 2: 1})\n",
+    "  * ```c```의 결과는 다음과 같다 : ```Counter({0: 2, 1: 1, 2: 1})```\n",
     "  * 0이 2개, 1이 1개, 2가 1개 있음을 나타냄"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Generator \n",
-    "\n",
-    "* List의 문제 중 하나는 그 길이가 매우 커질 수 있다는 점.\n",
-    "* 예를 들어 Python2에서 ```range(1000000)```은 백만 개의 원소를 가지는 list.\n",
-    "* 때로는 단순히 for문을 돌리기 위해 이 데이터를 모두 생성하여 메모리에 저장하는 것은 낭비일 수 있음.\n",
-    "* 반면 Python3에서는 ```range(1000000)```가 generator의 형태로 바뀜.\n",
-    "* generator는 ```for```문 등을 이용하여 반복 가능하지만, 그 값들을 생성하는 것은 필요한 경우만 실행.\n",
-    "* Python2에서는 generator 역할을 하는 ```xrange```라 불리우는 함수가 있으며, \n",
-    "  * Python 3에서는 ```range``` 자체가 ```generator```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'range' and 'range'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-28dc29cb5f5d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# generator를 list처럼 합치면 예상치 못한 결과가 나올 수 있음\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'range' and 'range'"
-     ]
-    }
-   ],
-   "source": [
-    "# generator를 list처럼 합치면 예상치 못한 결과가 나올 수 있음\n",
-    "for i in range(3) + range(4,6): print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "# list로 변환하여 해결하는 방안이 있음\n",
-    "for i in list(range(3)) + list(range(3,6)): print(i)"
    ]
   },
   {
@@ -2125,7 +2254,7 @@
    "source": [
     "### dictionary의 item()\n",
     "\n",
-    "* dict의 items() method는 yield를 이용하여 key-value 형태의 generator를 반환"
+    "* dict의 items() method는 key-value 형태의 iterator를 반환"
    ]
   },
   {
@@ -2309,15 +2438,6 @@
    "source": [
     "four_with_replacement = [random.choice(range(10)) for _ in range(4)]\n",
     "print(four_with_replacement)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len()"
    ]
   }
  ],
