--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -1855,24 +1855,24 @@
    "source": [
     "### String, tuple, list 공통적인 기능\n",
     "\n",
-    "* seq[i] : i번째 원소\n",
-    "* len(seq) : 길이\n",
-    "* seq1 + seq2 : 연결\n",
-    "* n * seq : n번 반복\n",
-    "* seq[start:end] : 일부\n",
-    "* e in seq : 만약 e가 seq에 속하면 True, 아니면 False\n",
-    "* e not in seq : 만약 e가 seq에 속하면 False, 아니면 True\n",
-    "* for e in seq : 반복문\n",
+    "* ```seq[i]``` : i번째 원소\n",
+    "* ```len(seq)``` : 길이\n",
+    "* ```seq1 + seq2``` : 연결\n",
+    "* ```n * seq``` : n번 반복\n",
+    "* ```seq[start:end]``` : 일부\n",
+    "* ```e in seq``` : 만약 e가 seq에 속하면 True, 아니면 False\n",
+    "* ```e not in seq``` : 만약 e가 seq에 속하면 False, 아니면 True\n",
+    "* ```for e in seq``` : 반복문\n",
     "\n",
     "### Dictionary\n",
     "\n",
     "* Dictionary는 list처럼 여러 원소들을 하나의 collection으로 사용\n",
     "* List에서는 index를 통하여 원소에 접근하였지만, dictionary에서는 key를 통하여 접근\n",
     "* Dictionary의 기본 구조\n",
-    "  * {key1: element1, key2: element2, … }\n",
+    "  * ```{key1: element1, key2: element2, … }```\n",
     "* key는 일반적으로 string이나 숫자를 사용\n",
     "  * 예제 – 학생 이름과 점수\n",
-    "   * {'Tom': 92, 'Jane': 95, 'Amy': 73, 'Nick': 81}\n",
+    "   * ```{'Tom': 92, 'Jane': 95, 'Amy': 73, 'Nick': 81}```\n",
     "   * 학생 이름이 key로 사용되었으며, 점수가 값으로 사용됨\n",
     "\n",
     "### key를 통한 접근"
@@ -2388,9 +2388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* random.random()은 0과 1사이에서 uniform하게 분포된 랜덤 숫자를 반환\n",
-    "* _는 다시 사용하지 않을 dummy variable을 표현\n",
-    "  * x로 바꾸어도 상관없음\n",
+    "* ```random.random()```은 0과 1사이에서 uniform하게 분포된 랜덤 숫자를 반환\n",
+    "* ```_```는 다시 사용하지 않을 dummy variable을 표현\n",
+    "  * ```x```로 바꾸어도 상관없음\n",
     "* 랜덤 샘플 추출 (중복 제외)\n"
    ]
   },
