--- a/6.Linear_algebra.ipynb
+++ b/6.Linear_algebra.ipynb
@@ -309,7 +309,7 @@
     "### Numpy array \n",
     "\n",
     "* numpy의 다양한 기능은 array라는 데이터구조를 바탕으로 이루어진다.\n",
-    "* numpy는 다양한 방법을 통해 만들 수 있다.\n",
+    "* numpy array는 다양한 방법을 통해 만들 수 있다.\n",
     "  * 파이썬 리스트 또는 튜플을 이용하는 방법\n",
     "  * arange, linspace 등과 같이 numpy 배열을 생성하는 데 사용되는 함수를 사용하는 방법\n",
     "  * 파일에서 데이터를 읽어들이는 방법\n",
