--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -407,8 +407,8 @@
     }
    ],
    "source": [
-    "def printme(str):\n",
-    "    print(\"Input is :\", str)\n",
+    "def printme(stri):\n",
+    "    print(\"Input is :\", stri)\n",
     "    return\n",
     "\n",
     "printme()"
@@ -419,12 +419,12 @@
    "metadata": {},
    "source": [
     "* 다음과 같이 인자가 어떤 값을 입력받는지 확실히 표현할 수도 있다.\n",
-    "  * ```(str = \"My string\") ```이라고 표현한 것에 주목하자."
+    "  * ```(stri = \"My string\") ```이라고 표현한 것에 주목하자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -436,12 +436,12 @@
     }
    ],
    "source": [
-    "def printme(str):\n",
-    "    print(\"Input is :\", str)\n",
+    "def printme(stri):\n",
+    "    print(\"Input is :\", stri)\n",
     "    return\n",
     "\n",
     "\n",
-    "printme(str = \"My string\")"
+    "printme(stri = \"My string\")"
    ]
   },
   {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "12"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "12"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,12 +558,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* 최소공배수를 구하는 함수도 만들어 보자."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 예제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +900,24 @@
     "    for x in range(0, numHeads + 1):\n",
     "        y = numHeads - x\n",
     "        if 4*x + 2*y == numLegs:\n",
-    "              return [x, y]\n"
+    "              return x, y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(farm(20, 56))"
    ]
   },
   {
@@ -905,24 +929,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 12]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(farm(20, 56))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 10]\n"
+      "(10, 10)\n"
      ]
     }
    ],
@@ -942,16 +949,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, None]"
+       "(None, None)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,8 +968,8 @@
     "    for x in range(0, numHeads + 1):\n",
     "        y = numHeads - x\n",
     "        if 4*x + 2*y == numLegs:\n",
-    "            return [x, y]\n",
-    "    return [None, None]\n",
+    "            return x, y\n",
+    "    return None, None\n",
     "\n",
     "farm(100,10)"
    ]
@@ -985,26 +992,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of heads : \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-53e744786f16>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Number of chickens : '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mchickens\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mfarm_UI\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-39-53e744786f16>\u001b[0m in \u001b[0;36mfarm_UI\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfarm_UI\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mheads\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Enter the number of heads : '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mlegs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Enther the number of legs : '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;33m[\u001b[0m\u001b[0mpigs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mchickens\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfarm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mheads\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlegs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mpigs\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "Enter the number of heads : 50\n",
+      "Enther the number of legs : 160\n",
+      "Number of pigs :  30\n",
+      "Number of chickens :  20\n"
      ]
     }
    ],
@@ -1012,7 +1010,7 @@
     "def farm_UI():\n",
     "    heads = int(input('Enter the number of heads : '))\n",
     "    legs = int(input('Enther the number of legs : '))\n",
-    "    [pigs, chickens] = farm(heads, legs)\n",
+    "    pigs, chickens = farm(heads, legs)\n",
     "    if pigs == None:\n",
     "        print('No solution')\n",
     "    else:\n",
@@ -1049,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1082,7 @@
        "4"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1110,7 @@
        "4"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1161,7 @@
        "8.426149773176359"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1182,7 @@
        "1.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1202,7 @@
        "2.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1222,7 @@
        "0.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1242,7 @@
        "3.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1262,7 @@
        "0.6931471805599452"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1299,7 @@
        "2.5"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1320,7 @@
        "2"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,16 +1348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8835102435392831"
+       "0.10668914840319754"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,16 +1369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.540327229756403"
+       "6.341924961487889"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,16 +1389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,16 +1409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.514807152542178"
+       "0.6654604009008476"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1476,11 +1474,11 @@
       "The number is smaller than your guess, try again.\n",
       "Guess the number between 1 to 100 (type q to quit) : 25\n",
       "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 37\n",
+      "Guess the number between 1 to 100 (type q to quit) : 32\n",
       "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 43\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 46\n",
+      "Guess the number between 1 to 100 (type q to quit) : 41\n",
+      "The number is smaller than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 36\n",
       "Correct!\n"
      ]
     }
@@ -1500,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,16 +1513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.0825738787078636"
+       "-0.4360479212496367"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1549,7 @@
        "10"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,6 +1557,27 @@
    "source": [
     "import random  \n",
     "random.randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import *  \n",
+    "randint(1, 10)"
    ]
   },
   {
@@ -1573,27 +1592,6 @@
       ]
      },
      "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from random import *  \n",
-    "randint(1, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
